--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@tailwindcss/cli": "^4.0.0",
     "flowbite": "^3.0.0",
     "tailwindcss": "^4.0.0"
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
